changed user#index view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing users</h1>
+<h1>Ta kariolia pou graftikan</h1>
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>Email</th>
+    <th>ONOMA ALVANOU</th>
+    <th>Klemmeno Email</th>
     <th></th>
     <th></th>
     <th></th>
